# langchain-advanced-document-handling-retrieval-techniques-course

./: .env.example  .gitignore  README.md  _quarto.yml  app.py  index.qmd  ingest.py  pyproject.toml
_book/: index.html  search.json
_book/notebooks/: 01_context_aware_text_extraction.html  03_indexing_vectors.html  04_parent_retrievers.html  05_self_retrievers.html  06_multi_query_retriever.html  07_ensemble_retriever.html  09_maximal_marginal_relevance_reranking.html  10_lost_in_the_middle_reranking.html  11_everything_together.html
docs/: index.html  robots.txt  search.json  sitemap.xml
docs/notebooks/: 01_context_aware_text_extraction.html  02_context_aware_text_splitting.html  03_indexing_vectors.html  04_parent_retrievers.html  (+7 more)
notebooks/: 01_context_aware_text_extraction.ipynb  02_context_aware_text_splitting.ipynb  03_indexing_vectors.ipynb  04_parent_retrievers.ipynb  05_self_retrievers.ipynb  06_multi_query_retriever.ipynb  07_ensemble_retriever.ipynb  08_semantic_reranking.ipynb  09_maximal_marginal_relevance_reranking.ipynb  10_lost_in_the_middle_reranking.ipynb  11_everything_together.ipynb
notebooks_live/: 01_context_aware_text_extraction.ipynb  02_context_aware_text_splitting.ipynb  03_indexing_vectors.ipynb  04_parent_retrievers.ipynb  05_self_retrievers.ipynb  06_multi_query_retriever.ipynb  06_multi_query_retriever.ipynb.ipynb  07_ensemble_retriever.ipynb  08_semantic_reranking.ipynb  09_maximal_marginal_relevance_reranking.ipynb  10_lost_in_the_middle_reranking.ipynb  11_everything_together.ipynb
src/: langchain_docs_loader.py
(+2 files in other folders)
